# G3D

./: CMakeLists.txt
G3D.lib/include/G3D/: platform.h
GLG3D.lib/include/GLG3D/: GLCaps.h
GLG3D.lib/source/: GLCaps.cpp
ffmpeg/source/ffmpeg-export-2008-07-21/: version.sh
jpeg.lib/build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jpeg.vcxproj  jpeg.vcxproj.filters
jpeg.lib/build32/Debug/: jpeg.lib
jpeg.lib/build32/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
jpeg.lib/build32/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
jpeg.lib/build32/jpeg.dir/Debug/jpeg.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog
png.lib/build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  png.vcxproj  png.vcxproj.filters
png.lib/build32/Debug/: png.lib
png.lib/build32/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
png.lib/build32/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
png.lib/build32/png.dir/Debug/png.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.write.1.tlog
samples/shader/data-files/: phong.pix
samples/starter/data-files/: crates.scn.any
zip.lib/build32/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  zip.vcxproj  zip.vcxproj.filters
zip.lib/build32/Debug/: zip.lib
zip.lib/build32/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.write.1.tlog
zip.lib/build32/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
zip.lib/build32/zip.dir/Debug/zip.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.read.1.tlog
zlib.lib/build32/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  zlib.vcxproj  zlib.vcxproj.filters
zlib.lib/build32/Debug/: zlib.lib
zlib.lib/build32/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
zlib.lib/build32/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
zlib.lib/build32/zlib.dir/Debug/zlib.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog
